kubectl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: call-queue-on-mobile
spec:
  selector:
    matchLabels:
      app: call-queue-on-mobile
  replicas: 1
  template:
    metadata:
      labels:
        app: call-queue-on-mobile
    spec:
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: call-queue-on-mobile-claim
      containers:
        - name: call-queue-on-mobile
          image: 191518685251.dkr.ecr.us-west-1.amazonaws.com/call-queue-on-mobile:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: persistent-storage
              mountPath: /app/.data
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: call-queue-on-mobile-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: call-queue-on-mobile
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: call-queue-on-mobile-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:191518685251:certificate/1b36669f-ca16-455b-b2b9-bf4c1bea2aa8
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: call-queue-on-mobile-service
                port:
                  number: 80
